deployment/kubernetes/base/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studio-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: api.emme.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studio-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.emme.app
      secretName: studio-api-tls
